--- a/2017/组件库设计实战 - 国际化方案/组件库设计实战 - 国际化方案.md
+++ b/2017/组件库设计实战 - 国际化方案/组件库设计实战 - 国际化方案.md
@@ -134,7 +134,7 @@ localeGet(
 
 语言文件中的模板如下：
 
-```
+```json
 // zh-CN
 "news_tilte": "阿里巴巴向印度尼西亚电商网站 Tokopedia 注资{number}{unit}{currency}。"
 
@@ -171,7 +171,7 @@ function updateIntl(locale = 'en-US', file = enUS) {
 
 这样我们就可以方便地将语言文件挂载在 redux store 的一个分支下：
 
-```
+```javascript
 const mapStateToProps = (state) => ({
   intl: state.intl,
 });
