update 组件库设计实战 - 组件分类、文档管理与打包发布

--- a/2016/组件库设计实战 - 组件分类、文档管理与打包发布/组件库设计实战 - 组件分类、文档管理与打包发布.md
+++ b/2016/组件库设计实战 - 组件分类、文档管理与打包发布/组件库设计实战 - 组件分类、文档管理与打包发布.md
@@ -97,6 +97,8 @@ import Carousel from 'xui/lib/carousel';
 import 'xui/lib/carousel/index.css';
 ```
 
+的方式按需调用组件。
+
 ## 小结
 在本文中，我们主要从组件分类、文档管理、打包发布三个方面阐述了如何将结构自由且数据解耦的 React 组件库落到实处。
 
