--- a/2020/谈谈电商赛道的需求侧改革.md
+++ b/2020/谈谈电商赛道的需求侧改革.md
@@ -42,4 +42,4 @@
 
 正如克莱顿·克里斯坦森在《创新者的窘境》中提出的『破坏性创新』所预言的那样，未来能够颠覆传统电商企业的，一定不是另一家在供给侧（商家、供应链）做到登峰造极的公司，巨头们迫切需要对自己的产品进行一次彻彻底底的需求侧改革来应对这一未来可能会发生的困境。
 
-当然，传统电商这么多年积累下来的服务工厂、商家、品牌的经验不是没有价值的，但这些价值在未来会更多地投射在云和产业互联网领域，让我们拭目以待。
+当然，传统电商这么多年积累下来的服务工厂、商家、品牌的经验并不是没有价值的，但这些价值在未来会更多地投射在云和产业互联网领域，让我们拭目以待。
