--- a/2021/2020 个人投资笔记（中）.md
+++ b/2021/2020 个人投资笔记（中）.md
@@ -1,5 +1,7 @@
 # 2020 个人投资笔记（中）
 
+> 以下信息仅供参考，不对您构成任何投资建议。
+
 #### SaaS
 ##### 相关股票（7）
 * Zoom（ZM）
@@ -20,8 +22,8 @@
 * 博通（AVGO）
 * 台积电（TSM）
 
-#### 巨头（FAANG + AT + 二线龙头）
-##### 相关股票（15）
+#### 巨头
+##### 相关股票（8）
 * Facebook（FB）
 * 苹果（AAPL）
 * 亚马逊（AMZN）
@@ -30,6 +32,9 @@
 * 微软（MSFT）
 * 阿里巴巴（BABA|HK 09988）
 * 腾讯（HK 00700）
+
+#### 二线龙头
+##### 相关股票（7）
 * 拼多多（PDD）
 * Sea（SE）
 * 京东（JD|HK 09618）
